django.log
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:06:20
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:27:51
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:29:22
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:33:39
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:34:18
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:34:49
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:35:03
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/core/admin.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:36:26
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Watching for file changes with StatReloader
/var/www/html/informesjw/informesjw/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:37:38
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
WARNING:root:No DATABASE_URL environment variable set, and so no databases setup
Watching for file changes with StatReloader
INFO:django.utils.autoreload:Watching for file changes with StatReloader
/var/www/html/informesjw/informesjw/settings.py changed, reloading.
INFO:django.utils.autoreload:/var/www/html/informesjw/informesjw/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
June 23, 2025 - 16:38:06
Django version 5.2.3, using settings 'informesjw.settings'
Starting development server at http://0.0.0.0:8080/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Traceback (most recent call last):
  File "/var/www/html/informesjw/manage.py", line 24, in <module>
    main()
  File "/var/www/html/informesjw/manage.py", line 20, in main
    execute_from_command_line(sys.argv)
  File "/var/www/html/informesjw/venv/lib/python3.11/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/var/www/html/informesjw/venv/lib/python3.11/site-packages/django/core/management/__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "/var/www/html/informesjw/venv/lib/python3.11/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/var/www/html/informesjw/venv/lib/python3.11/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/www/html/informesjw/venv/lib/python3.11/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/var/www/html/informesjw/informesjw/settings.py", line 100
    '''DATABASES = {
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 151)
